[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "context-ledger"
version = "0.1.0"
description = "AI session context handoff CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
scripts = {context-ledger = "context_ledger:main"}

[tool.setuptools]
py-modules = ["context_ledger"]
